--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
 @import '../../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+@import './important.css';
+@import './style.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
